fix mobile menu item alignment

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -138,13 +138,14 @@ svg.bi {
       top: 0;
       height: 100vh;
       z-index: 2;
-      align-items: flex-start;
 
       li {
         width: 100%;
 
         a {
           padding: 0 1.25rem;
+          width: 100%;
+          justify-content: flex-start;
         }
 
         a:hover {
